syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.blossom.socialcontract";

package org.blossom.socialcontract;

service SocialContract {
  rpc getUserFollowers(UserRequest) returns (FollowersResponse);
  rpc getMostFollowed(MostFollowedRequest) returns (MostFollowedResponse);
}

message MostFollowedRequest {
  int32 limit = 1;
}

message MostFollowedResponse {
  repeated int32 users = 2;
}

message UserResponse {
  int32 id = 1;
  string fullName = 2;
  string username = 3;
  string imageUrl = 4;
}

message UserRequest {
  int32 id = 1;
}

message FollowersResponse {
  repeated int32 userId = 1;
}